server/pdf/pdf.css
@font-face {
font-family: 'Jungka-Light';
src: url('/assets/font1.otf') format('opentype');
}
@font-face {
font-family: 'Jungka-Regular';
src: url('/assets/font2.otf') format('opentype');
}
@font-face {
font-family: 'Jungka-Medium';
src: url('/assets/font3.otf') format('opentype');
}

.cv_header {
  margin-left: 9%;
  margin-right: 9%;
  padding-top: 20px;
}

.companylogo {
  max-width: 120px;
  max-height: 35px;
}

header > .confidential{
  float:right;
  text-align: right;
  font-family: "Jungka-Light";
  font-size: 9px;
  right: 0;
}

#whole-cv {
  margin-left: 9%;
  margin-right: 9%;
  margin-top: 40px;
}

.cv {
  min-height: 29px;
  border-top: 1px solid #DDD;
  margin-bottom: 20px;
  padding-top: 10px;
}

#first-section {
  min-height: 160px;
  border-top: none;
  padding-top: 0;
}

#last-section {
  margin-bottom: 0;
}

.face {
  float: left;
  width: 3.5cm;
}

.cv > p, .cv > ul > li {
  font-family: "Jungka-Light";
  letter-spacing: 0.1px;
  font-size: 9px;
}

.cv > p > img {
  float: left;
  width: 100px;
  padding-left: 0px;
}

.cv > h1,
.cv > h2,
.cv > h3,
.cv > h4,
.cv > h5,
.cv > h6,
.cv > p,
.cv > ul > li,
.cv > blockquote  {
    margin-left: 4cm;
    margin-top: 0px;
    margin-bottom: 0px;
    padding-top: 0px;
    padding-bottom: 0px;
}

.cv > h1 {
  font-size: 20px;
  font-family: "Jungka-Regular";
}

.cv > h2 {
  font-size: 15px;
  padding-bottom: 3px;
  font-family: "Jungka-Regular";
}

.cv > h3 {
  float: left;
  width: 5rem;
  font-family: "Jungka-Regular";
  font-size: 12px;
  font-weight: 400;
  margin-left: 0;
  color: #FC6054;
  top: 30px;
}

.cv > h4 {
  font-size: 11px;
  color: #FC6054;
  font-family: "Jungka-Medium";
  letter-spacing: -0.2px;
}
.cv > h5 {
  font-size: 11px;
  font-family: "Jungka-Medium";
  letter-spacing: -0.2px;
  color: #393929;
}
.cv > h6 {
  font-size: 10px;
  font-family: "Jungka-Light";
}

.cv > p > code {
  letter-spacing: 0.1px;
  font-size: 11px;
  width: 390px;
  color: #393929;
  font-family: "Jungka-Light";
}

.cv > ul {
  margin-top: 0;
  padding-left: 1.12em;
}

.cv > ul > li {
  list-style-type: none;
  position: relative;
}

.cv > ul > li::before {
  content: '\2022';
  position: absolute;
  font-size: x-small;
  left: -1.8em;
}

.cv > blockquote {
  padding: 0;
}

.cv > blockquote > p {
  letter-spacing: 0.1px;
  margin-top: 0;
  font-size: 9px;
  color: #6C6C6C;
  margin-bottom: 10px;
  font-family: "Jungka-Regular";
}

footer .footer_contact {
  margin: 0px auto;
  font-family: "Jungka-Light";
  font-size: 0.5em;
  text-align: center;
  width: 100%;

}

[href]:link {
  color: black;
  text-decoration: none;
}

